tests/type-destructors/type-destructors.exp
Error ----------------------------------------------------- element_type.js:1:17

Cannot use type without exactly 2 type arguments.


Error ------------------------------------------------------ element_type.js:7:2

Cannot cast `'hello world'` to `Arr_Elem` because string [1] is incompatible
with number [2].


Error ----------------------------------------------------- element_type.js:18:2

Cannot cast `'hello world'` to `Obj_Elem` because string [1] is incompatible
with number [2].


Error ---------------------------------------------------------- errors.js:12:10

Cannot instantiate `$PropertyType` because property `p` is missing in object
type [1].


Error ---------------------------------------------------------- errors.js:15:10

Cannot instantiate `P` because property `p` is missing in object type [1].


Error ----------------------------------------------------------- errors.js:18:1

Cannot call `fn1` because property `p` is missing in object literal [1].


Error ----------------------------------------------------------- errors.js:19:1

Cannot call `fn1` because an indexer property is missing in null [1].


Error ----------------------------------------------------------- errors.js:21:1

Cannot call `fn2` because property `p` is missing in object literal [1].


Error ----------------------------------------------------------- errors.js:22:1

Cannot call `fn2` because an indexer property is missing in null [1].


Error ----------------------------------------------------------- errors.js:24:1

Cannot call `fn3` because property `p` is missing in object literal [1].


Error ----------------------------------------------------------- errors.js:25:1

Cannot call `fn3` because property `p` is missing in null [1].


Error ----------------------------------------------------------- errors.js:27:1

Cannot call `fn4` because property `p` is missing in object literal [1].


Error ----------------------------------------------------------- errors.js:28:1

Cannot call `fn4` because property `p` is missing in null [1].


Error ----------------------------------------------------------- errors2.js:6:8

Cannot instantiate `$PropertyType` because property `p` is missing in object
type [1].


Error ---------------------------------------------------------- errors2.js:8:10

Cannot instantiate `$PropertyType` because property `p` is missing in object
type [1].


Error --------------------------------------------------------- errors2.js:12:10

Cannot instantiate `B` because property `p` is missing in object type [1].


Error --------------------------------------------------------- errors2.js:15:31

Cannot instantiate `$PropertyType` because property `p` is missing in object
type [1].


Error --------------------------------------------------------- errors2.js:17:31

Cannot instantiate `B` because property `p` is missing in object type [1].


Error ---------------------------------------------------------- errors2.js:25:2

Cannot call `f4` because property `p` is missing in object type [1].


Error ---------------------------------------------------------- errors2.js:26:2

Cannot call `f5` because property `p` is missing in object type [1].


Error --------------------------------------------------- non_maybe_type.js:5:15

Cannot return `0` because number [1] is incompatible with string [2].


Error --------------------------------------------------- non_maybe_type.js:10:2

Cannot cast `0` to `$NonMaybeType` because number [1] is incompatible with
empty [2].


Error ---------------------------------------------------- property_type.js:1:18

Cannot use `$PropertyType` because the second type argument must be a string
literal.


Error ----------------------------------------------------- property_type.js:6:2

Cannot cast `42` to `Obj_Prop_x` because number [1] is incompatible with
string [2].


Error --------------------------------------------------- property_type.js:10:15

Cannot return `0` because number [1] is incompatible with string [2].


Error ------------------------------------------------------------ tvar3.js:20:2

Cannot cast `fn1(...)` to `B` because `A` [1] is incompatible with `B` [2].


Error ----------------------------------------------------------- tvar3.js:21:10

Cannot cast `fn2(...)` to function type because in the first argument, `A` [1]
is incompatible with `B` [2].


Error ------------------------------------------------------------ tvar3.js:22:2

Cannot cast `fn3(...)` to `C` because `A` [1] is incompatible with `C` [2].


Error ------------------------------------------------------------ tvar3.js:22:6

Cannot call `fn3` with `a` bound to `x` because `A` [1] is incompatible with
`B` [2].


Error ----------------------------------------------------------- tvar3.js:23:13

Cannot cast `fn4(...)` to function type because in the first argument, `B` [1]
is incompatible with `C` [2].


Error ------------------------------------------------------------ tvar3.js:23:6

Cannot call `fn4` with `a` bound to `x` because `A` [1] is incompatible with
`B` [2].


Error ------------------------------------------------------------ tvar3.js:25:2

Cannot cast `fn5(...)` to `B` because `A` [1] is incompatible with `B` [2].


Error ------------------------------------------------------------ tvar3.js:26:2

Cannot cast `fn6(...)` to function type because in the first argument, `A` [1]
is incompatible with `B` [2].


Error ------------------------------------------------------------ tvar3.js:27:2

Cannot cast `fn7(...)` to `C` because `A` [1] is incompatible with `C` [2].


Error ------------------------------------------------------------ tvar3.js:27:6

Cannot call `fn7` with `a` bound to `x` because `A` [1] is incompatible with
`B` [2].


Error ----------------------------------------------------------- tvar3.js:27:13

Cannot call `fn7` with function bound to `y` because in the first argument,
`B` [1] is incompatible with `A` [2].


Error ------------------------------------------------------------ tvar3.js:28:2

Cannot cast `fn8(...)` to function type because in the first argument, `B` [1]
is incompatible with `C` [2].


Error ------------------------------------------------------------ tvar3.js:28:6

Cannot call `fn8` with `a` bound to `x` because `A` [1] is incompatible with
`B` [2].


Error ----------------------------------------------------------- tvar3.js:28:13

Cannot call `fn8` with function bound to `y` because in the first argument,
`B` [1] is incompatible with `A` [2].


Error ------------------------------------------------------------ tvar4.js:24:1

Cannot call `fn1` because property `p` is missing in object type [1].


Error ------------------------------------------------------------ tvar4.js:25:1

Cannot call `fn2` because property `p` is missing in object type [1].


Error ----------------------------------------------------------- tvar4.js:33:48

Cannot call `fn3(...)` with object literal bound to the first parameter because
in property `foo`, number [1] is incompatible with string [2].


Error ------------------------------------------------------------ tvar4.js:38:9

Cannot call `fn3` because undefined property `p` [1] is incompatible with
number [2].


Error ----------------------------------------------------------- tvar4.js:43:17

Cannot call `a` with object literal bound to the first parameter because object
literal [1] is incompatible with `T` [2].


Error ----------------------------------------------------------- tvar4.js:47:29

Cannot call `fn4(...)` with `42` bound to the first parameter because number [1]
is incompatible with string [2].


Error ------------------------------------------------------------ tvar4.js:51:1

Cannot call `fn4` because property `p` is missing in object type [1].


Error: union.js:2
  2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                            ^^^^ boolean. This type is incompatible with
  2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: `$NonMaybeType`(s)
  Member 1:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $NonMaybeType
  Error:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                              ^^^^ boolean. This type is incompatible with
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number
  Member 2:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $NonMaybeType
  Error:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                              ^^^^ boolean. This type is incompatible with
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: union.js:4
  4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                        ^^^^ boolean. This type is incompatible with
  4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: `$PropertyType`(s)
  Member 1:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $PropertyType
  Error:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                          ^^^^ boolean. This type is incompatible with
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number
  Member 2:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $PropertyType
  Error:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                          ^^^^ boolean. This type is incompatible with
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: union.js:10
 10: (null: P2); // err, null ~> string|number
      ^^^^ null. This type is incompatible with
 10: (null: P2); // err, null ~> string|number
            ^^ union: `P2`(s)
  Member 1:
    7: type P2 = $PropertyType<T, 'p'>; // NB: T is not resolved yet
                 ^^^^^^^^^^^^^^^^^^^^^ P2
  Error:
   10: (null: P2); // err, null ~> string|number
        ^^^^ null. This type is incompatible with
    7: type P2 = $PropertyType<T, 'p'>; // NB: T is not resolved yet
                 ^^^^^^^^^^^^^^^^^^^^^ string
  Member 2:
    7: type P2 = $PropertyType<T, 'p'>; // NB: T is not resolved yet
                 ^^^^^^^^^^^^^^^^^^^^^ P2
  Error:
   10: (null: P2); // err, null ~> string|number
        ^^^^ null. This type is incompatible with
    7: type P2 = $PropertyType<T, 'p'>; // NB: T is not resolved yet
                 ^^^^^^^^^^^^^^^^^^^^^ number


Found 49 errors
